# PyTrees_Copilot

./: LICENSE  README.md  build_pkg.sh  generate_files.sh  launch.sh
.devcontainer/: Dockerfile  devcontainer.json
example_heater_pkg/: CMakeLists.txt  package.xml
example_heater_pkg/example_heater_pkg/: bt_node.py  task_update_vars.py
example_heater_pkg/launch/: tree.launch.py
example_heater_pkg/src/: monitor.c  monitor.h  monitor_node.cpp
file_generation/: base_gen.py  bt_node_gen.py  header_extractor.py  monitor_node_gen.py  pipeline_script.py
file_generation/proj_addons/build_updates/: package.xml
file_generation/proj_addons/py_addons/: task_publish_var.py  task_update_vars.py
file_generation/templates/: bt_node_template.j2  monitor_node_template.j2
heater_copilot/: Heater.hs
